[metadata]
name = Interactive Data Acoustic Modeling
version = 0.1.0
author = Fabian Rosario, Aidan Stambaugh
author_email = frosariocolon2527@floridapoly.edu, astambaugh2627@floridapoly.edu
description = An interactive data acoustic modeling program.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aidsvm/Interactive-Data-Acoustic-Modeling
license = MIT

[options]
packages = find:
install_requires =
    matplotlib==3.8.0
    ffmpeg==1.4
    scipy==1.11.4
    pydub==0.25.1
    numpy==1.26.0
    soundfile==0.12.1

[options.packages.find]
where = src
